@@ -19,10 +19,6 @@
 	var m0s = sqrt(-1)·matrix({{1,0}});//Operator '*' cannot be applied to operands of type 'System.Numerics.Complex' and 'MathNet.Numerics.LinearAlgebra.Double.DenseMatrix'
 18. TSL 'FIle' class parameterless contructor creates OpenFileDialog, we need Open/Save File Dialog
 19. Exponents cant have spaces right now because of TSLCompiler regex, maybe we should allow it
-20. Autocomplete is comparing substring including whole signature of function, should only use name
-
-
-	-autcomplete does not always work in scripting
 	-images do not appear in installation on win xp
 	-decimal dot in superscript and comma in superscript missing in windows xp
 	
